tests/compile-fail/integration__integration__general__func_untyped.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: var-typed function
   ┌─ <input>:26:9
   │
26 │         var foo() { return 1; }
   │         ^^^ cannot be used on functions


